--- a/src/app/views/base/navbar/navbar.component.html
+++ b/src/app/views/base/navbar/navbar.component.html
@@ -1,15 +1,15 @@
 <div class="navbar-pr">
     <div class="title-navbar">
-        SB AFDMIN {{ anhquy }}
+        Xin chào, Phạm Đức Qúy
     </div>
     <div class="menu">
         <ul>
-            <li><a href="">User</a></li>
-            <li><a href="">User</a></li>
-            <li><a href="">User</a></li>
-            <li><a href="">User</a></li>
-            <li><a href="">User</a></li>
-            <li><a href="">User</a></li>
+            <li><a routerLink="/cate/index">Danh mục</a></li>
+            <li><a routerLink="/subcate/index">Danh mục phụ</a></li>
+            <li><a href="">Danh mục con</a></li>
+            <li><a href="">Danh sách user</a></li>
+            <li><a href="">Danh sách slider</a></li>
+            <li><a href="">Danh sách user tố cáo</a></li>
         </ul>
     </div>
 </div>
