--- a/src/app/views/base/navbar/navbar.component.scss
+++ b/src/app/views/base/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 .navbar-pr{
     background-color: #4e73df;
     width: 220px;
-    height: auto;
+    height: 1000px;
     .title-navbar{
         text-align: center;
         color: white;
