--- a/src/app/views/base/login/login.component.html
+++ b/src/app/views/base/login/login.component.html
@@ -10,7 +10,7 @@
             <form #loginForm="ngForm"
             (ngSubmit)="createProduct(loginForm)">
                 <div class="text-email">
-                    <input type="text" placeholder="Email" [(ngModel)]="userLogin.email" name="email">
+                    <input type="text" placeholder="Email" [(ngModel)]="userLogin.name" name="name">
                 </div>
                 <div class="password">
                     <input type="password" placeholder="Password" [(ngModel)]="userLogin.password" name="password">
