--- a/src/app/views/pages/subcate/action/action.component.html
+++ b/src/app/views/pages/subcate/action/action.component.html
@@ -1,26 +1,43 @@
 <div class="form-page">
-    <h4>Thêm danh mục</h4>
-    <form #subCategoryForm="ngForm"
-    (ngSubmit)="createSubcate(subCategoryForm)">
-      <div class="form-group">
-        <label for="exampleFormControlInput1">Tên danh mục</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" [(ngModel)]="subcate.name" name="name">
-      </div>
-      <div class="form-group">
-        <label for="exampleFormControlSelect1">Loại danh mục</label>
-        <select class="form-control" id="exampleFormControlSelect1" [(ngModel)]="subcate.category_id" name="category_id">
-          <option *ngFor="let item of cates" value={{item.id}}>{{item.name}}</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="exampleFormControlSelect1">Trạng thái</label>
-        <select class="form-control" id="exampleFormControlSelect1" [(ngModel)]="subcate.status" name="status">
-          <option value=1>Hiện</option>
-          <option value=0>Ẩn</option>
-        </select>
-      </div>
-      
-      <button class="btn btn-danger">Thêm</button>
-      <button class="btn btn-infor ml-3">Hủy</button>
-    </form>
-  </div>
+  <h4>Thêm danh mục</h4>
+  <form #subCategoryForm="ngForm" (ngSubmit)="createSubcate(subCategoryForm)">
+    <div class="form-group">
+      <label for="exampleFormControlInput1">Tên danh mục</label>
+      <input
+        type="email"
+        class="form-control"
+        id="exampleFormControlInput1"
+        [(ngModel)]="subcate.name"
+        name="name"
+      />
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlSelect1">Loại danh mục</label>
+      <select
+        class="form-control"
+        id="exampleFormControlSelect1"
+        [(ngModel)]="subcate.category_id"
+        name="category_id"
+      >
+        <option *ngFor="let item of cates" value="{{ item.id }}">
+          {{ item.name }}
+        </option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlSelect1">Trạng thái</label>
+      <select
+        class="form-control"
+        id="exampleFormControlSelect1"
+        [(ngModel)]="subcate.status"
+        name="status"
+      >
+        <option value="1">Hiện</option>
+        <option value="0">Ẩn</option>
+      </select>
+    </div>
+
+    <button class="btn btn-danger">Thêm</button>
+    <button class="btn btn-infor ml-3">Hủy</button>
+  </form>
+</div>
