--- a/src/app/views/base/navbar/navbar.component.html
+++ b/src/app/views/base/navbar/navbar.component.html
@@ -7,6 +7,7 @@
             <li><a routerLink="/cate/index">Danh mục</a></li>
             <li><a routerLink="/subcate/index">Danh mục phụ</a></li>
             <li><a routerLink="/childcate/index">Danh mục con</a></li>
+            <li><a routerLink="/shipping/index">Danh mục shipping</a></li>
             <li><a href="">Danh sách user</a></li>
             <li><a href="">Danh sách slider</a></li>
             <li><a href="">Danh sách user tố cáo</a></li>
